net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/EmptyRouteTableTest[2018-11-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-f8f36359cd77847f054d721222e85c29-610432b922e8a1b7-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "77dea0315e6d3864cd559f49c3996436",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:39 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "50f7ab07-5255-4a01-9125-6afa0cd340fc",
        "x-ms-ratelimit-remaining-subscription-reads": "11786",
        "x-ms-request-id": "50f7ab07-5255-4a01-9125-6afa0cd340fc",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155039Z:50f7ab07-5255-4a01-9125-6afa0cd340fc"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg4337?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-50c5d8a58cc702b2c9dd8e0898cd9f24-f8b45e2747b4984a-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "06fc4f9f6f1c1f49fb11ff7bd761c483",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:39 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "a151d25f-2f9e-4b2b-9e9e-2790010d0a6e",
        "x-ms-ratelimit-remaining-subscription-writes": "1151",
        "x-ms-request-id": "a151d25f-2f9e-4b2b-9e9e-2790010d0a6e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155040Z:a151d25f-2f9e-4b2b-9e9e-2790010d0a6e"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337",
        "name": "csmrg4337",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "37",
        "Content-Type": "application/json",
        "traceparent": "00-4c238b43105ae7379421283a7c742509-020bd7001350b541-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "25172e3b306c8a4c7772f23aa76e94a6",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/352838b6-b690-4a72-a0b2-a458d6a00768?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "478",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:43 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "36c16595-0caa-4c26-8ecd-71e621273a7f",
        "x-ms-client-request-id": "25172e3b306c8a4c7772f23aa76e94a6",
        "x-ms-correlation-request-id": "381431a9-f350-4ffb-9c6a-1c9f4f8853e9",
        "x-ms-ratelimit-remaining-subscription-writes": "1150",
        "x-ms-request-id": "352838b6-b690-4a72-a0b2-a458d6a00768",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155043Z:381431a9-f350-4ffb-9c6a-1c9f4f8853e9"
      },
      "ResponseBody": {
        "name": "azsmnet409",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409",
        "etag": "W/\"5cdc3d62-052c-4db6-9085-6342f4ce3e71\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "54e21f21-e8a0-480f-aebd-1b3321af99c4",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/352838b6-b690-4a72-a0b2-a458d6a00768?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-4c238b43105ae7379421283a7c742509-69ab59f233557083-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "365d31c6b61f1f32af7ba4fd56e454a3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:43 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7e769d49-277c-454f-b632-e7911dc2a7c3",
        "x-ms-client-request-id": "365d31c6b61f1f32af7ba4fd56e454a3",
        "x-ms-correlation-request-id": "79a2d64a-e5c5-4757-a8d7-ec807bd03172",
        "x-ms-ratelimit-remaining-subscription-reads": "11785",
        "x-ms-request-id": "194858cf-ea26-470e-bf96-40331ccf0144",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155043Z:79a2d64a-e5c5-4757-a8d7-ec807bd03172"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-4c238b43105ae7379421283a7c742509-b6e81c381277ea87-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2621d56abbaf2618fd82cdfae3e7ce81",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "479",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:44 GMT",
        "ETag": "W/\"edef80be-dbbf-42bd-b45d-df6501e08df1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e9f6a75f-891d-4c9a-b0c7-03a0d7aa0aa8",
        "x-ms-client-request-id": "2621d56abbaf2618fd82cdfae3e7ce81",
        "x-ms-correlation-request-id": "6de8c738-94ce-40ba-a6af-74a604a940d6",
        "x-ms-ratelimit-remaining-subscription-reads": "11784",
        "x-ms-request-id": "8b7becdb-eae4-4f1e-9235-c8ae54dab5ab",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155044Z:6de8c738-94ce-40ba-a6af-74a604a940d6"
      },
      "ResponseBody": {
        "name": "azsmnet409",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409",
        "etag": "W/\"edef80be-dbbf-42bd-b45d-df6501e08df1\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "54e21f21-e8a0-480f-aebd-1b3321af99c4",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-5e6e2a7583bbf4cae05d91af70d6e792-b0bfeeeb78e0a486-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7673177e5d10ff8607f517fe70323e73",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "479",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:44 GMT",
        "ETag": "W/\"edef80be-dbbf-42bd-b45d-df6501e08df1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "25e4c0e1-d45f-40ac-a7ec-2b3140080a30",
        "x-ms-client-request-id": "7673177e5d10ff8607f517fe70323e73",
        "x-ms-correlation-request-id": "5271a1da-444d-45c5-8484-c0daa139dc19",
        "x-ms-ratelimit-remaining-subscription-reads": "11783",
        "x-ms-request-id": "1d1bb361-7e12-4282-b409-8f9cdfad2185",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155045Z:5271a1da-444d-45c5-8484-c0daa139dc19"
      },
      "ResponseBody": {
        "name": "azsmnet409",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409",
        "etag": "W/\"edef80be-dbbf-42bd-b45d-df6501e08df1\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "54e21f21-e8a0-480f-aebd-1b3321af99c4",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-c79af0b7c63800a5678084de9f2a9b38-4d232f476f326203-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e7faa91dcdd40b2b1837399ce9383bc8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "556",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b7bd0951-43dc-4347-a9c3-98d735f791d7",
        "x-ms-client-request-id": "e7faa91dcdd40b2b1837399ce9383bc8",
        "x-ms-correlation-request-id": "a2472b43-5d9f-4fbb-982f-b980399e85cc",
        "x-ms-ratelimit-remaining-subscription-reads": "11782",
        "x-ms-request-id": "e0fb32f8-69ec-483c-b207-a811314be6c4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155045Z:a2472b43-5d9f-4fbb-982f-b980399e85cc"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet409",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409",
            "etag": "W/\"edef80be-dbbf-42bd-b45d-df6501e08df1\"",
            "type": "Microsoft.Network/routeTables",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "54e21f21-e8a0-480f-aebd-1b3321af99c4",
              "disableBgpRoutePropagation": false,
              "routes": []
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables/azsmnet409?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-b783a70fbfe93868eea79f3181505fcb-d58a7bff50b53b66-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3f7f22addd700d924e211ebaa31ab5ca",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9c5d2ad4-5269-4449-9aa4-19e8505d377f?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:50:45 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/9c5d2ad4-5269-4449-9aa4-19e8505d377f?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5670916f-3a3e-4835-8aed-127a5a307f2c",
        "x-ms-client-request-id": "3f7f22addd700d924e211ebaa31ab5ca",
        "x-ms-correlation-request-id": "51e08a09-1872-4c56-b1e2-9327b733ff71",
        "x-ms-ratelimit-remaining-subscription-deletes": "14975",
        "x-ms-request-id": "9c5d2ad4-5269-4449-9aa4-19e8505d377f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155046Z:51e08a09-1872-4c56-b1e2-9327b733ff71"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9c5d2ad4-5269-4449-9aa4-19e8505d377f?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-b783a70fbfe93868eea79f3181505fcb-da38db72bd23c9d8-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4d504fb9feb3400217ed99b2ae7168fe",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:46 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "003124d8-c061-4962-a494-4ed0ef430946",
        "x-ms-client-request-id": "4d504fb9feb3400217ed99b2ae7168fe",
        "x-ms-correlation-request-id": "9e861c08-896b-4d4b-b8fc-06217128a76c",
        "x-ms-ratelimit-remaining-subscription-reads": "11781",
        "x-ms-request-id": "63b2a359-4a15-4e0a-91bf-adb1f2ed8bb1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155046Z:9e861c08-896b-4d4b-b8fc-06217128a76c"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4337/providers/Microsoft.Network/routeTables?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-574c13ae49862601ad8c7a1661f0c881-3e228c0c4c85182a-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8f586e82015cc6dc75ce530880b9e864",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:46 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8a8a4647-17e6-466d-bb9b-9761aade36ea",
        "x-ms-client-request-id": "8f586e82015cc6dc75ce530880b9e864",
        "x-ms-correlation-request-id": "814037af-c5d9-468a-aa34-da3caea46e56",
        "x-ms-ratelimit-remaining-subscription-reads": "11780",
        "x-ms-request-id": "5b88bdcb-f3c8-410c-83e5-4a222bef940c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155046Z:814037af-c5d9-468a-aa34-da3caea46e56"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1246148866",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
