net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/EmptyRouteTableTest[2018-11-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-badd1f98cdc8f92e84a40d19eb1ef1f9-a4199aa7ea445a3b-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f4b02e28a235b3e7bc30699354cb3497",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "1d30b842-cd67-4bc1-bb4d-f8b0bf87adce",
        "x-ms-ratelimit-remaining-subscription-reads": "11731",
        "x-ms-request-id": "1d30b842-cd67-4bc1-bb4d-f8b0bf87adce",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155210Z:1d30b842-cd67-4bc1-bb4d-f8b0bf87adce"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg2031?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-099d393ff76a51d4ede20c13aa97b822-2f63c0269f8fbaeb-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8428bd5405d826797823a26618c1afb0",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "259a2ed7-89cd-4704-b004-0cfa87c689ff",
        "x-ms-ratelimit-remaining-subscription-writes": "1133",
        "x-ms-request-id": "259a2ed7-89cd-4704-b004-0cfa87c689ff",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155210Z:259a2ed7-89cd-4704-b004-0cfa87c689ff"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031",
        "name": "csmrg2031",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "37",
        "Content-Type": "application/json",
        "traceparent": "00-f95d194d0ece79ecd37bdc6c36c2b886-2aab4ba099202ae3-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "9419beb405daba621d0d51c0e7c14f83",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/8a56f170-4c6d-4773-9620-8a77a611215e?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "480",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:13 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "204a01ef-221e-48d3-a21f-9acc4877279f",
        "x-ms-client-request-id": "9419beb405daba621d0d51c0e7c14f83",
        "x-ms-correlation-request-id": "4aed6418-cc84-4050-8a44-dbf67a11eabc",
        "x-ms-ratelimit-remaining-subscription-writes": "1132",
        "x-ms-request-id": "8a56f170-4c6d-4773-9620-8a77a611215e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155213Z:4aed6418-cc84-4050-8a44-dbf67a11eabc"
      },
      "ResponseBody": {
        "name": "azsmnet2844",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844",
        "etag": "W/\"55a8c93d-b717-4ea3-8e75-0efc25ed782c\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "3b719f07-7856-4d74-a37c-6c5bec3b3556",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/8a56f170-4c6d-4773-9620-8a77a611215e?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-f95d194d0ece79ecd37bdc6c36c2b886-82331a3cd2362017-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "75167ae33e7eb779c6c9baf727669161",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:13 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "59744068-d01d-4371-b78a-dc2e49ef08c3",
        "x-ms-client-request-id": "75167ae33e7eb779c6c9baf727669161",
        "x-ms-correlation-request-id": "65319970-9670-4f89-84e0-59a9bd593c5a",
        "x-ms-ratelimit-remaining-subscription-reads": "11730",
        "x-ms-request-id": "a0130620-8569-4cb5-b95e-0dc9ab552083",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155214Z:65319970-9670-4f89-84e0-59a9bd593c5a"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-f95d194d0ece79ecd37bdc6c36c2b886-65ed6271652fe0cb-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0e39e353cedc655095e2c61e861d6e79",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "481",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:14 GMT",
        "ETag": "W/\"79770306-088a-47ba-80d8-1d147ac19dc1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "196d3667-bab2-4772-960b-8c2765b566ae",
        "x-ms-client-request-id": "0e39e353cedc655095e2c61e861d6e79",
        "x-ms-correlation-request-id": "c54b09c2-c925-4ac5-aa83-ab9ebc75675a",
        "x-ms-ratelimit-remaining-subscription-reads": "11729",
        "x-ms-request-id": "53abd98a-2e9b-45b6-8fee-657f1c9b25da",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155214Z:c54b09c2-c925-4ac5-aa83-ab9ebc75675a"
      },
      "ResponseBody": {
        "name": "azsmnet2844",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844",
        "etag": "W/\"79770306-088a-47ba-80d8-1d147ac19dc1\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "3b719f07-7856-4d74-a37c-6c5bec3b3556",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-fc0c97c384f7ca91bb574e1987faf3b8-e1f846efd01a91bf-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6cdd979edaaaa004391b1abf94310f67",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "481",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:14 GMT",
        "ETag": "W/\"79770306-088a-47ba-80d8-1d147ac19dc1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c97422a3-002e-4b26-9f98-b046d13df198",
        "x-ms-client-request-id": "6cdd979edaaaa004391b1abf94310f67",
        "x-ms-correlation-request-id": "ca889b43-caeb-4afc-a1e2-7ecb3d1f487d",
        "x-ms-ratelimit-remaining-subscription-reads": "11728",
        "x-ms-request-id": "0efc8728-3d27-4e54-8527-5495feaff329",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155214Z:ca889b43-caeb-4afc-a1e2-7ecb3d1f487d"
      },
      "ResponseBody": {
        "name": "azsmnet2844",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844",
        "etag": "W/\"79770306-088a-47ba-80d8-1d147ac19dc1\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "3b719f07-7856-4d74-a37c-6c5bec3b3556",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "68f11d2a606a14dc2ab1e09b775b30a9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "558",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:15 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "fb0d7b8c-ecce-48a1-b500-7fac5a9b09ba",
        "x-ms-client-request-id": "68f11d2a606a14dc2ab1e09b775b30a9",
        "x-ms-correlation-request-id": "1de74887-2233-46b1-8822-3a878d0301ad",
        "x-ms-ratelimit-remaining-subscription-reads": "11727",
        "x-ms-request-id": "7e7e348e-0c8a-44f0-9762-48591fc7c7b8",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155215Z:1de74887-2233-46b1-8822-3a878d0301ad"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet2844",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844",
            "etag": "W/\"79770306-088a-47ba-80d8-1d147ac19dc1\"",
            "type": "Microsoft.Network/routeTables",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "3b719f07-7856-4d74-a37c-6c5bec3b3556",
              "disableBgpRoutePropagation": false,
              "routes": []
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables/azsmnet2844?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-89eb0dfc7e41d1f038a4a80c5225831b-e75f37de6604f761-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8f58415a248979b7de99d4c1b491d163",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/5ea2c1d1-b6f4-45fb-9f33-0c7399de025f?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:52:15 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/5ea2c1d1-b6f4-45fb-9f33-0c7399de025f?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2cfeecff-6ca7-40ed-a7ab-ea6c14a4b503",
        "x-ms-client-request-id": "8f58415a248979b7de99d4c1b491d163",
        "x-ms-correlation-request-id": "32c33ef7-b548-47e2-b367-ee306e9c1f06",
        "x-ms-ratelimit-remaining-subscription-deletes": "14971",
        "x-ms-request-id": "5ea2c1d1-b6f4-45fb-9f33-0c7399de025f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155216Z:32c33ef7-b548-47e2-b367-ee306e9c1f06"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/5ea2c1d1-b6f4-45fb-9f33-0c7399de025f?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-89eb0dfc7e41d1f038a4a80c5225831b-8c4914f2a88fe32c-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "526471eb7fd905de66788ad18b1b6098",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:16 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3ec34b5e-2ca4-408b-9bf4-7164b7349701",
        "x-ms-client-request-id": "526471eb7fd905de66788ad18b1b6098",
        "x-ms-correlation-request-id": "d4c08464-56a3-4607-b76b-26173f50dcd6",
        "x-ms-ratelimit-remaining-subscription-reads": "11726",
        "x-ms-request-id": "2ed3ca4d-4ec7-4417-a3ac-0c5411c8ec27",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155216Z:d4c08464-56a3-4607-b76b-26173f50dcd6"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg2031/providers/Microsoft.Network/routeTables?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "17c87ce0c767557e321ad4c0e2bd7f75",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:16 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "25698c68-c033-49f2-bc0e-290fd438e0cd",
        "x-ms-client-request-id": "17c87ce0c767557e321ad4c0e2bd7f75",
        "x-ms-correlation-request-id": "1fa251d9-acc0-4ba5-b8b0-dd5d9dbdcabf",
        "x-ms-ratelimit-remaining-subscription-reads": "11725",
        "x-ms-request-id": "60520552-3396-42bf-afab-a4f04b58e979",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155216Z:1fa251d9-acc0-4ba5-b8b0-dd5d9dbdcabf"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "436224743",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
